card wrapper alignment fix

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,7 +1,3 @@
-.card-wrapper {
-  margin: 10px;
-}
-
 .cards {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
